--- a/src/app/shared/hero/hero.component.html
+++ b/src/app/shared/hero/hero.component.html
@@ -1,8 +1,8 @@
 <div class="wrap-hero">
   <div class="content">
     <picture>
-      <source srcset="assets/resources/pic-banner-desk.svg" media="(min-width: 1200px)">
-      <img src="assets/resources/pic-banner.svg" alt="">
+      <source srcset="assets/resources/pic-banner-desk.png" media="(min-width: 1200px)">
+      <img src="assets/resources/pic-banner-desk.png" alt="">
     </picture>
     <span>
       <p>Hola</p>
