--- a/src/app/views/pages/about/about.component.scss
+++ b/src/app/views/pages/about/about.component.scss
@@ -16,6 +16,7 @@ main {
     margin: auto;
     display: flex;
     flex-direction: column;
+    color: var(--foreground-color);
 
     h1 {
       font-family: "Product Sans Thin Regular";
