--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="card-container">
   <div class="card-group">
     <article mat-ripple>
-      <img [src]="data[0].picture" [alt]="data[0].title" width="100%" />
+      <img [src]="data[0].picture" [alt]="data[0].title" />
       <span>
         <h3>{{ data[0].title }}</h3>
         <p>{{ data[0].descript }}</p>
@@ -11,7 +11,7 @@
       </span>
     </article>
     <article mat-ripple>
-      <img [src]="data[1].picture" [alt]="data[1].title" width="100%" />
+      <img [src]="data[1].picture" [alt]="data[1].title"/>
       <span>
         <h3>{{ data[1].title }}</h3>
         <p>{{ data[1].descript }}</p>
@@ -23,7 +23,7 @@
   </div>
   <div class="card-group">
     <article mat-ripple>
-      <img [src]="data[2].picture" [alt]="data[2].title" width="100%" />
+      <img [src]="data[2].picture" [alt]="data[2].title"/>
       <span>
         <h3>{{ data[2].title }}</h3>
         <p>{{ data[2].descript }}</p>
@@ -33,7 +33,7 @@
       </span>
     </article>
     <article mat-ripple>
-      <img [src]="data[3].picture" [alt]="data[3].title" width="100%" />
+      <img [src]="data[3].picture" [alt]="data[3].title"/>
       <span>
         <h3>{{ data[3].title }}</h3>
         <p>{{ data[3].descript }}</p>
