--- a/src/app/shared/dinamic-hero/dinamic-hero.component.scss
+++ b/src/app/shared/dinamic-hero/dinamic-hero.component.scss
@@ -1,123 +1,32 @@
-// .wrap-hero {
-//   width: 100%;
-//   height: fit-content;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-
-//   .content {
-//     width: fit-content;
-//     display: flex;
-//     height: 100%;
-//     flex-direction: column;
-//     justify-content: space-between;
-//     align-items: center;
-//     overflow: hidden;
-
-//     img {
-//       height: 350px;
-//     }
-
-//     span {
-//       width: fit-content;
-//       height: fit-content;
-//       gap: 15px;
-//       display: flex;
-//       flex-direction: column;
-//       align-items: center;
-
-//       p,
-//       h1,
-//       h2 {
-//         margin: 0;
-//         width: fit-content;
-//       }
-
-//       p {
-//         font-size: 31px;
-//       }
-//       h1 {
-//         font-size: 30px;
-//         width: 100%;
-//         text-align: center;
-//       }
-//       h2 {
-//         font-size: 20px;
-//         font-family: "Product Sans Light Regular";
-//       }
-//     }
-//   }
-// }
-// @media only screen and (min-width: 576px) {
-//   .wrap-hero {
-//     width: 100%;
-//     height: calc(100vh - 56px);
-//     display: flex;
-//     align-items: center;
-
-//     .content {
-//       height: 100%;
-//       display: flex;
-//       align-items: center;
-//       margin: auto;
-//       gap: 20px;
-//       justify-content: unset;
-
-//       img {
-//         height: 450px;
-//       }
-
-//       span {
-//         width: fit-content;
-//         height: fit-content;
-//         display: flex;
-//         flex-direction: column;
-//         gap: 15px;
-
-//         p,
-//         h1,
-//         h2 {
-//           margin: 0;
-//         }
-
-//         p {
-//           font-size: 31px;
-//         }
-//         h1 {
-//           font-size: 50px;
-//         }
-//         h2 {
-//           font-size: 31px;
-//           font-family: "Product Sans Light Regular";
-//         }
-//       }
-//     }
-//   }
-// }
 .wrap-hero {
   width: 100%;
   height: fit-content;
   display: flex;
-  align-items: center;
   margin: auto;
   position: relative;
   flex-direction: column;
+  overflow: hidden;
 
   img {
     width: 100%;
+    z-index: 2;
+  }
+
+  picture {
+    background-color: var(--hero-surface);
   }
 
   .content {
-    width: fit-content;
+    width: 100%;
     height: fit-content;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: auto;
     position: relative;
     left: 0;
     padding: 40px 40px;
     box-sizing: border-box;
+    background-color: var(--hero-surface);
 
     span {
       width: fit-content;
@@ -126,8 +35,9 @@
       flex-direction: column;
       gap: 15px;
       align-items: baseline;
-      color: var(--color-step-1000);
+      color: var(--foreground-color);
       max-width: 100%;
+      max-width: 550px;
 
       p,
       h1,
@@ -138,22 +48,19 @@
       p {
         font-size: 30px;
         font-family: "Product Sans Thin Regular";
-        color: var(--color-step-1000);
       }
       h1 {
         font-size: 40px;
         text-align: start;
-        color: var(--color-step-1000);
       }
       .descript-text {
         font-size: 20px;
-        color: var(--color-step-1000);
         font-family: "Product Sans Light Regular";
       }
       button {
         background: none;
-        border: 1px solid white;
-        color: var(--color-step-1000);
+        border: 1px solid var(--foreground-color-200);
+        color: var(--foreground-color-200);
         padding: 12px 45px;
         font-size: 16px;
         cursor: pointer;
@@ -168,62 +75,34 @@
     display: flex;
     align-items: center;
     background-color: #707070;
-    margin: auto;
-    position: relative;
     max-width: 1600px;
-
-    img {
-      width: 100%;
-    }
 
     .content {
       width: fit-content;
       height: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       margin: auto;
       position: absolute;
-      left: 7vw;
+      background: none;
 
       span {
-        width: fit-content;
-        height: fit-content;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        align-items: baseline;
-        color: var(--color-step-1000);
-        max-width: 35%;
+        color: var(--foreground-color);
 
-        p,
-        h1,
-        h2 {
-          margin: 0;
-        }
+        max-width: 35%;
+        position: relative;
+        left: 6vw;
 
         p {
-          font-size: 30px;
-          font-family: "Product Sans Thin Regular";
-          color: var(--color-step-1000);
+          color: var(--foreground-color);
         }
         h1 {
           font-size: 50px;
-          text-align: start;
-          color: var(--color-step-1000);
+          color: var(--foreground-color);
         }
         .descript-text {
-          font-size: 20px;
-          color: var(--color-step-1000);
-          font-family: "Product Sans Light Regular";
+          color: var(--foreground-color);
         }
         button {
-          background: none;
-          border: 1px solid white;
-          color: var(--color-step-1000);
-          padding: 12px 45px;
-          font-size: 16px;
-          cursor: pointer;
+          color: var(--foreground-color);
         }
       }
     }
@@ -232,66 +111,21 @@
 @media only screen and (min-width: 1200px) {
   .wrap-hero {
     width: fit-content;
-    height: fit-content;
-    display: flex;
     align-items: center;
-    background-color: #707070;
-    margin: auto;
-    position: relative;
     max-width: 1600px;
-
-    img {
-      width: 100%;
-    }
 
     .content {
       width: 100%;
       height: 100%;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
       margin: auto;
       position: absolute;
-      left: 7vw;
 
       span {
-        width: fit-content;
-        height: fit-content;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        align-items: baseline;
-        color: var(--color-step-1000);
         max-width: 35%;
 
-        p,
-        h1,
-        h2 {
-          margin: 0;
-        }
-
-        p {
-          font-size: 30px;
-          font-family: "Product Sans Thin Regular";
-          color: var(--color-step-1000);
-        }
         h1 {
-          font-size: 50px;
           text-align: start;
-          color: var(--color-step-1000);
-        }
-        .descript-text {
-          font-size: 20px;
-          color: var(--color-step-1000);
-          font-family: "Product Sans Light Regular";
-        }
-        button {
-          background: none;
-          border: 1px solid white;
-          color: var(--color-step-1000);
-          padding: 12px 45px;
-          font-size: 16px;
-          cursor: pointer;
         }
       }
     }
@@ -300,33 +134,10 @@
 @media only screen and (min-width: 1600px) {
   .wrap-hero {
     .content {
-      left: 120px;
+      span {
+        position: relative;
+        left: 120px;
+      }
     }
   }
 }
-// @media only screen and (min-width: 1400px) {
-//   .wrap-hero {
-//     .content {
-//       // max-width: 1600px;
-//       span {
-//         p,
-//         h1,
-//         h2 {
-//           margin: 0;
-//         }
-
-//         p {
-//           font-size: 40px;
-//         }
-//         h1 {
-//           font-size: 55px;
-//           text-align: start;
-//         }
-//         h2 {
-//           font-size: 35px;
-//           font-family: "Product Sans Light Regular";
-//         }
-//       }
-//     }
-//   }
-// }
