--- a/src/app/shared/hero/hero.component.scss
+++ b/src/app/shared/hero/hero.component.scss
@@ -28,6 +28,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      color: var(--foreground-color);
 
       p,
       h1,
@@ -54,7 +55,7 @@
 @media only screen and (min-width: 576px) {
   .wrap-hero {
     width: 100%;
-    height: calc(100vh - 56px);
+    height: fit-content;
     display: flex;
     align-items: center;
 
