--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -19,6 +19,10 @@
       border-radius: 8px;
       max-width: 380px;
 
+      .edit-button{
+        width: 10;
+      }
+
       img{
         width: 100%;
         border-radius: 8px;
