--- a/src/app/shared/hero/hero.component.html
+++ b/src/app/shared/hero/hero.component.html
@@ -5,9 +5,9 @@
       <img src="assets/resources/pic-banner-desk.png" alt="">
     </picture>
     <span>
-      <p>Hola</p>
-      <h1>Soy Diego Carbone</h1>
-      <h2>Full Stack Developper</h2>
+      <p>{{heroData.firstText}}</p>
+      <h1>{{heroData.secondText}}</h1>
+      <h2>{{heroData.thirdText}}</h2>
     </span>
 
   </div>
