--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -88,10 +88,9 @@
             >Recordar contraseña</mat-checkbox
           >
           <div class="btn-container">
-            <button class="white-text" mat-flat-button color="primary">
+            <button class="white-text" mat-flat-button (click)="loggin()">
               <span>Siguente</span>
             </button>
-            <!-- <button mat-button color="primary"><span>Crear cuenta</span></button> -->
           </div>
         </form>
       </div>
