--- a/src/app/views/pages/home/home.component.html
+++ b/src/app/views/pages/home/home.component.html
@@ -1,7 +1,4 @@
-<!-- <div class="header">
-  <img src="assets/Group 3.png" alt="" height="100%">
-</div> -->
-<app-hero></app-hero>
+<app-hero [heroData]="heroData"></app-hero>
 <br>
 <div class="wrap-title">
   <h3>Tecnologias aprendiendo actualmente</h3>
