--- a/src/app/shared/hero/hero.component.scss
+++ b/src/app/shared/hero/hero.component.scss
@@ -1,3 +1,9 @@
+@keyframes fadeIn {
+  0% {opacity: 0%; transform: translateY(20px);}
+  50% {transform: translateY(0px);}
+  100% {opacity: 100%; }
+}
+
 .wrap-hero {
   width: 100%;
   height: fit-content;
@@ -15,6 +21,7 @@
     overflow: hidden;
 
     picture{
+      width: fit-content;
       margin-top: -10px;
     }
     img {
@@ -29,6 +36,7 @@
       flex-direction: column;
       align-items: center;
       color: var(--foreground-color);
+      animation: fadeIn 1s;
 
       p,
       h1,
@@ -68,7 +76,8 @@
       justify-content: unset;
 
       img {
-        height: 450px;
+        width: 48vw;
+        height: fit-content;
       }
 
       span {
@@ -115,9 +124,14 @@
       margin: auto;
       position: relative;
 
-      picture, img {
-        height: 100%;
+      picture {
+        height: fit-content;
       }
+      img{
+        width: 40vw;
+        height: fit-content;
+      }
+
 
       span {
         width: fit-content;
@@ -158,6 +172,7 @@
         h1,
         h2 {
           margin: 0;
+          transition: all 0.5s;
         }
 
         p {
