--- a/src/app/views/auth/login/login.component.scss
+++ b/src/app/views/auth/login/login.component.scss
@@ -94,10 +94,10 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
           }
 
           &:focus {
-            background-color: var(--color-primary-tint-200);
-            border-bottom: 2px solid var(--color-primary);
+            background-color: #3c80ff10;
+            border-bottom: 2px solid #1E67D6;
             transition: all 0.3s;
-            // box-shadow: 0 0 50px px var(--color-primary);
+            // box-shadow: 0 0 50px px #1E67D6;
 
             &::placeholder {
               color: var(--foreground-color);
@@ -120,6 +120,7 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
         height: 50px;
         font-family: "Roboto", sans-serif;
         font-weight: 400;
+        background-color: #1E67D6;
 
         &.white-text {
           color: white;
@@ -217,10 +218,10 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
               }
 
               &:focus {
-                background-color: var(--color-primary-tint-200);
-                border-bottom: 2px solid var(--color-primary);
+                background-color: #3c80ff10;
+                border-bottom: 2px solid #1E67D6;
                 transition: all 0.3s;
-                // box-shadow: 0 0 50px px var(--color-primary);
+                // box-shadow: 0 0 50px px #1E67D6;
 
                 &::placeholder {
                   color: var(--foreground-color);
@@ -243,6 +244,7 @@ $method-1-acrylic-noise-texture: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEU
             height: 50px;
             font-family: "Roboto", sans-serif;
             font-weight: 400;
+            background-color: #1E67D6;
 
             &.white-text {
               color: white;
