--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,8 +1,9 @@
 :root {
-  --color-primary: #1E67D6;
+  --color-primary: #FF833C;
   --color-primary-tint-100: #ff833c85;
-  --color-primary-tint-200: #3c80ff10;
+  --color-primary-tint-200: #ff833c18;
 
+  --color-step-0: #000000;
   --color-step-50: #1e1e1e;
   --color-step-100: #2a2a2a;
   --color-step-150: #363636;
@@ -30,9 +31,13 @@
 .light {
   --header-surface: #ffffffb8;
   --body-surface: var(--color-step-1000);
-  --logotype-font-color: var(--color-step-300);
+  --logotype-font-color: var(--color-step-400);
   --header-border-color: #8080802f;
   --header-hover-tab: var(--color-step-850);
+  --sidenav-surface:var(--color-step-950);
+  --sidenav-foreground:var(--color-step-300);
+
+  --admin-back:var(--color-step-1000);
 
   --hero-surface: var(--color-step-950);
 
@@ -56,6 +61,10 @@
   --header-border-color: #3535352f;
   --hero-surface: var(--color-step-200);
   --header-hover-tab: var(--color-step-250);
+  --sidenav-surface:var(--color-step-50);
+  --sidenav-foreground:var(--color-step-1000);
+
+  --admin-back:var(--color-step-100);
 
   --foreground-color: var(--color-step-1000);
   --on-foreground-color: var(--color-step-50);
