--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,9 +14,13 @@ body {
   background-color: var(--body-surface);
   margin: 0;
   transition: all 0.5s;
-  font-family: 'Product Sans', sans-serif;
-
+  font-family: 'Roboto', sans-serif;
+  // font-family: "Product Sans", sans-serif;
 }
-.mat-mdc-checkbox .mdc-checkbox .mdc-checkbox__native-control:enabled~.mdc-checkbox__background .mdc-checkbox__checkmark{
+.mat-mdc-checkbox
+  .mdc-checkbox
+  .mdc-checkbox__native-control:enabled
+  ~ .mdc-checkbox__background
+  .mdc-checkbox__checkmark {
   color: white !important;
 }
