--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,45 +1,45 @@
 <div class="card-container">
   <div class="card-group">
-    <article mat-ripple>
-      <img [src]="data[0].picture" [alt]="data[0].title" />
+    <article mat-ripple (click)="editCard(0)">
+      <img [src]="currentData[0].picture" [alt]="currentData[0].title" />
       <span>
-        <h3>{{ data[0].title }}</h3>
-        <p>{{ data[0].descript }}</p>
-        <button *ngIf="data[0].button">
-          {{ data[0].button }}<mat-icon>chevron_right</mat-icon>
-        </button>
+        <h3>{{ currentData[0].title }}</h3>
+        <p>{{ currentData[0].descript }}</p>
+        <!-- <button *ngIf="currentData[0].button">
+          {{ currentData[0].button }}<mat-icon>chevron_right</mat-icon>
+        </button> -->
       </span>
     </article>
-    <article mat-ripple>
-      <img [src]="data[1].picture" [alt]="data[1].title"/>
+    <article mat-ripple (click)="editCard(1)">
+      <img [src]="currentData[1].picture" [alt]="currentData[1].title"/>
       <span>
-        <h3>{{ data[1].title }}</h3>
-        <p>{{ data[1].descript }}</p>
-        <button *ngIf="data[1].button">
-          {{ data[1].button }}<mat-icon>chevron_right</mat-icon>
-        </button>
+        <h3>{{ currentData[1].title }}</h3>
+        <p>{{ currentData[1].descript }}</p>
+        <!-- <button *ngIf="currentData[1].button">
+          {{ currentData[1].button }}<mat-icon>chevron_right</mat-icon>
+        </button> -->
       </span>
     </article>
   </div>
-  <div class="card-group">
-    <article mat-ripple>
-      <img [src]="data[2].picture" [alt]="data[2].title"/>
+  <div class="card-group" >
+    <article mat-ripple (click)="editCard(2)">
+      <img [src]="currentData[2].picture" [alt]="currentData[2].title"/>
       <span>
-        <h3>{{ data[2].title }}</h3>
-        <p>{{ data[2].descript }}</p>
-        <button *ngIf="data[2].button">
-          {{ data[2].button }}<mat-icon>chevron_right</mat-icon>
-        </button>
+        <h3>{{ currentData[2].title }}</h3>
+        <p>{{ currentData[2].descript }}</p>
+        <!-- <button *ngIf="currentData[2].button">
+          {{ currentData[2].button }}<mat-icon>chevron_right</mat-icon>
+        </button> -->
       </span>
     </article>
-    <article mat-ripple>
-      <img [src]="data[3].picture" [alt]="data[3].title"/>
+    <article mat-ripple (click)="editCard(3)">
+      <img [src]="currentData[3].picture" [alt]="currentData[3].title"/>
       <span>
-        <h3>{{ data[3].title }}</h3>
-        <p>{{ data[3].descript }}</p>
-        <button *ngIf="data[3].button">
-          {{ data[3].button }}<mat-icon>chevron_right</mat-icon>
-        </button>
+        <h3>{{ currentData[3].title }}</h3>
+        <p>{{ currentData[3].descript }}</p>
+        <!-- <button *ngIf="currentData[3].button">
+          {{ currentData[3].button }}<mat-icon>chevron_right</mat-icon>
+        </button> -->
       </span>
     </article>
   </div>
