--- a/src/app/views/admin/admin.component.scss
+++ b/src/app/views/admin/admin.component.scss
@@ -1,9 +1,86 @@
 .wrap-desktop{
   display: none;
 }
+
+mat-drawer{
+  .mat-drawer-side{
+    border: none;
+  }
+}
+
+.logo-title {
+  font-family: "Product Sans Medium Regular";
+  color: var(--logotype-font-color);
+  font-size: 18px;
+  margin-left: 20px;
+
+  span {
+    font-family: "Product Sans Medium Regular";
+    color: var(--color-primary);
+  }
+}
+.example-spacer{
+  width: 100%;
+}
+main{
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr;
+}
+mat-drawer{
+  border:0px !important;
+  background-color: var(--admin-background) !important;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+
+}
+.flex-item-container{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+mat-list-item{
+  min-width: 256px;
+  padding: 0 30px;
+  box-sizing: border-box;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+
+  span{
+    font-size: 14px;
+    letter-spacing: .01785714em;
+    font-size: .875rem;
+    line-height: 1.25rem;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+
+  &.item-selected{
+    background-color: #ff8a3028;
+    span{
+      color: var(--color-primary-font) !important;
+      font-weight: 600;
+      font-size: 14px;
+      letter-spacing: .01785714em;
+      font-size: .875rem;
+      line-height: 1.25rem;
+    }
+  }
+}
+
+
 @media screen and (min-width:940px) {
   app-navigation-view{
     display: none;
+  }
+  mat-drawer-content{
+    padding: 20px 40px 0 40px;
+    box-sizing: border-box;
   }
   .wrap-desktop{
     width: 100vw;
@@ -49,4 +126,3 @@
     }
   }
 }
-
