--- a/src/app/views/admin/dashboard/dashboard.component.html
+++ b/src/app/views/admin/dashboard/dashboard.component.html
@@ -1,28 +1,36 @@
 <div class="wrap-dashboard">
-  <div class="header-list">
-    <div class="content">
-      <p>Historial de cambios</p>
-    </div>
-    <button class="win-icon win-icon-Refresh"></button>
-  </div>
-  <div class="wrap-list">
-    <ul>
-      <li>
-        <p>Cambios en "Sobre mi"</p>
-        <p class="time">14:04</p>
-      </li>
-      <li>
-        <p>Cambios en "Sobre mi"</p>
-        <p class="time">14:04</p>
-      </li>
-      <li>
-        <p>Cambios en "Sobre mi"</p>
-        <p class="time">14:04</p>
-      </li>
-      <li>
-        <p>Cambios en "Sobre mi"</p>
-        <p class="time">14:04</p>
-      </li>
-    </ul>
-  </div>
+
+  <table  mat-table [dataSource]="dataSource" class="mat-elevation-z0">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef> Indice </th>
+      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> IP </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Hora </th>
+      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef> Fecha </th>
+      <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
 </div>
