--- a/src/app/views/admin/start-page/start-page.component.scss
+++ b/src/app/views/admin/start-page/start-page.component.scss
@@ -1,3 +1,13 @@
+:ng-deep{
+  .mat-mdc-tab-labels{
+    border-bottom: 1px solid red;
+  }
+}
+.outline{
+  width: 100%;
+  height: 1px;
+  background-color: rgba(143, 143, 143, 0.299)
+}
 .wrap-start-page {
   animation: startAnimation 0.3s;
   display: flex;
@@ -28,41 +38,10 @@
     width: 100%;
   }
 
-  .input-text {
-    color: white;
-    margin-bottom: 5px;
-  }
-  input,
-  select {
+  mat-form-field{
     width: 100%;
-    padding: 10px 15px;
-    margin: 8px 0;
-    display: inline-block;
-    border: none;
-    background: none;
-    color: var(--foreground-color);
-    background: rgba(0, 0, 0, 0.171);
-    font-size: 14px;
-    box-sizing: border-box;
-    outline: none;
-    margin-bottom: 20px;
-    outline: 2px solid #2c2c2c;
-
-    &::placeholder {
-      color: gray;
-    }
-
-    &:focus {
-      outline: 2px solid #1e67d6;
-      background: rgba(128, 128, 128, 0.171);
-      // box-shadow: 0 0 50px px #1E67D6;
-
-      &::placeholder {
-        color: var(--foreground-color);
-        opacity: 50%;
-      }
-    }
   }
+
 }
 @media screen and (min-width:940px) {
   .input-container{
